<resources>
    <string name="app_name">UserListing</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">example@email.com</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="join_date">Join Date</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="Delete">delete</string>
</resources>
